# Quake-III-Arena

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .gitattributes  .gitignore  BAZEL_TODO.md  BUILD.bazel  Makefile  Makefile.local  PLAN.md  README.md  README.txt  WORKSPACE  WORKSPACE.bazel  asset_bundles.md  automate_source_code_formatting.md  cleanup_opengl_wrapper.md  convert_tga_assets_to_png.md  engine_api.md  feature_template.md  improve_build_automation.md  index.md  ioq3.bazelproject  make-macosx-app.sh  make-macosx-ub.sh  make-macosx-ub2.sh  make-macosx.sh  materials_uplift.md  modernize_codebase.md  opengl2-readme.md  q3a.bazelproject  rebase.md  sdl.md  settings.md  synchronised_video_textures.md  update_thirdparty_libraries.md  voip-readme.txt  wasm.md  web_interface.md
build_defs/: BUILD.bazel  assets.bzl  assets_filegroup.bzl  copy_to_directory.bzl  http_repository_from_env.bzl  rules.bzl  transitions.bzl
code/botlib/: BUILD.bazel  aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_bspq3.cpp  be_aas_cluster.c  be_aas_cluster.cpp  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.cpp  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.c  be_aas_file.cpp  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.cpp  be_aas_main.h  be_aas_move.c  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.cpp  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.cpp  be_aas_reach.h  be_aas_route.c  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.cpp  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.cpp  (+51 more)
code/cgame/: BUILD.bazel  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newdraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_view.c  cg_weapons.c  tr_types.h
code/client/: BUILD.bazel  Info.plist  cl_avi.c  cl_avi.cpp  cl_browser.cpp  cl_cgame.c  cl_cgame.cpp  cl_cin.c  cl_cin.cpp  cl_console.c  cl_console.cpp  cl_curl.c  cl_curl.h  cl_download.cpp  cl_gl.cpp  cl_input.c  cl_input.cpp  cl_jpeg.c  cl_keys.c  cl_keys.cpp  cl_main.c  cl_main.cpp  cl_net_chan.c  cl_net_chan.cpp  cl_parse.c  cl_parse.cpp  cl_scrn.c  cl_scrn.cpp  cl_ui.c  cl_ui.cpp  client.h  client_help.h  keycodes.h  keys.h  libmumblelink.c  libmumblelink.h  qal.c  qal.h  snd_adpcm.c  snd_altivec.c  (+20 more)
code/collision_map/: BUILD.bazel  cm_load.c  cm_local.h  cm_patch.c  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c
code/game/: BUILD.bazel  ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  botlib.h  chars.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  (+25 more)
code/libogg-1.3.3/: BUILD.bazel
code/opusfile-0.9/: BUILD.bazel
code/q3_ui/: BUILD.bazel  q3_ui.q3asm  ui.q3asm  ui_addbots.c  ui_atoms.c  ui_cdkey.c  ui_cinematics.c  ui_confirm.c  ui_connect.c  ui_controls2.c  ui_credits.c  ui_demo2.c  ui_display.c  ui_gameinfo.c  ui_ingame.c  ui_loadconfig.c  ui_local.h  ui_login.c  ui_main.c  ui_menu.c  ui_mfield.c  ui_mods.c  ui_network.c  ui_options.c  ui_playermodel.c  ui_players.c  ui_playersettings.c  ui_preferences.c  ui_qmenu.c  ui_rankings.c  ui_rankstatus.c  ui_removebots.c  ui_saveconfig.c  ui_serverinfo.c  ui_servers2.c  ui_setup.c  ui_signup.c  ui_sound.c  ui_sparena.c  ui_specifyleague.c  (+10 more)
code/qcommon/: BUILD.bazel  attributes.h  cg_public.h  cg_syscalls.c  cm_load.c  cm_load.cpp  cm_local.h  cm_patch.c  cm_patch.cpp  cm_patch.h  cm_polylib.c  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.c  cm_test.cpp  cm_trace.c  cm_trace.cpp  cmd.c  cmd.cpp  common.c  common.cpp  common_help.h  crash.cpp  cvar.c  cvar.cpp  cvar.h  cvar_common.h  cvar_engine.h  files.c  files.cpp  g_public.h  g_syscalls.c  history.c  huffman.c  huffman.cpp  huffman_static.c  huffman_static.cpp  ioapi.c  ioapi.h  (+54 more)
code/renderer/: BUILD.bazel  qgl.h  qgl_linked.h  stb_image.cpp  stb_image.h  tr_animation.c  tr_arb.c  tr_backend.c  tr_backend.cpp  tr_backend_d3d11.cpp  tr_backend_gl2.cpp  tr_backend_gl3.cpp  tr_bsp.c  tr_bsp.cpp  tr_cmds.c  tr_cmds.cpp  tr_common.h  tr_curve.c  tr_curve.cpp  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_extramath.h  tr_extratypes.h  tr_fbo.c  tr_fbo.h  tr_flares.c  tr_font.c  tr_glsl.c  tr_help.h  tr_image.c  tr_image.cpp  tr_image.h  tr_image_2.c  tr_image_dds.c  tr_image_jpg.c  tr_image_jpg2.c  tr_image_png.c  tr_image_scale.cpp  (+37 more)
code/renderercommon/: BUILD.bazel  iqm.h  qgl.h  tr_common.h  tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
code/renderergl1/: BUILD.bazel  tr_altivec.c  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_subs.c  tr_surface.c  tr_world.c
code/renderergl2/: BUILD.bazel  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_extramath.h  tr_extratypes.h  tr_fbo.c  tr_fbo.h  tr_flares.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_postprocess.c  tr_postprocess.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
code/sdl/: BUILD.bazel  sdl_gamma.c  sdl_glimp.c  sdl_glw.h  sdl_icon.h  sdl_input.c  sdl_local.h  sdl_snd.c
code/server/: BUILD.bazel  (+23 more)
content/: BUILD.bazel  copy_files.sh
game/: BUILD.bazel
(+4033 files in other folders)
