# Run with "bazel build //:compile_test --check_visibility=false" to test all the libraries compile
cc_library(
    name = "compile_test",
    deps = [
        "//code/jpeg-8c:jpeg",
        "//code/libogg-1.3.3:ogg",
        "//code/libvorbis-1.3.6:vorbis",
        "//code/opus-1.2.1:opus",
        "//code/opusfile-0.9:opusfile",
        "//code/zlib",
    ],
)
