# Workspace named so that BUILD.bazel files in other workspaces can reference this
# namespace with a fixed name.
# TODO: Figure out what we are naming this project and rename as appropriate
workspace(name = "org_realityforge_ioq3")

load("@bazel_tools//tools/build_defs/repo:http.bzl", _http_archive = "http_archive")

_http_archive(
    name = "build_bazel_rules_apple",
    sha256 = "4161b2283f80f33b93579627c3bd846169b2d58848b0ffb29b5d4db35263156a",
    url = "https://github.com/bazelbuild/rules_apple/releases/download/0.34.0/rules_apple.0.34.0.tar.gz",
)

load("@build_bazel_rules_apple//apple:repositories.bzl", "apple_rules_dependencies")

apple_rules_dependencies()

load("//third_party/buildifier:repository.bzl", _load_buildifier_repository = "load_repository")
load("//third_party/content:repository.bzl", _load_pak_repositories = "load_pak_repositories")
load("//third_party/curl:repository.bzl", _load_curl_repository = "load_repository")
load("//third_party/go:repository.bzl", _load_go_repository = "load_repository")
load("//third_party/imagemagick:repository.bzl", _load_imagemagick_repository = "load_repository")
load("//third_party/libjpeg_turbo:repository.bzl", _load_libjpeg_turbo_repository = "load_repository")
load("//third_party/libpng:repository.bzl", _load_libpng_repository = "load_repository")
load("//third_party/nasm:repository.bzl", _load_nasm_repository = "load_repository")
load("//third_party/ogg:repository.bzl", _load_ogg_repository = "load_repository")
load("//third_party/openal:repository.bzl", _load_openal_repository = "load_repository")
load("//third_party/opus:repository.bzl", _load_opus_repository = "load_repository")
load("//third_party/opusfile:repository.bzl", _load_opusfile_repository = "load_repository")
load("//third_party/pngcrush:repository.bzl", _load_pngcrush_repository = "load_repository")
load("//third_party/protobuf:repository.bzl", _load_protobuf_repository = "load_repository")
load("//third_party/vorbis:repository.bzl", _load_vorbis_repository = "load_repository")
load("//third_party/zlib:repository.bzl", _load_zlib_repository = "load_repository")

_load_buildifier_repository()

_load_pak_repositories()

_load_curl_repository()

_load_go_repository()

_load_imagemagick_repository()

_load_libjpeg_turbo_repository()

_load_libpng_repository()

_load_nasm_repository()

_load_ogg_repository()

_load_openal_repository()

_load_opus_repository()

_load_opusfile_repository()

_load_pngcrush_repository()

_load_protobuf_repository()

_load_vorbis_repository()

_load_zlib_repository()

load("//third_party/go:repository2.bzl", _configure_go_repository = "configure_repository")
load("//third_party/protobuf:repository2.bzl", _configure_protobuf_repository = "configure_repository")

_configure_go_repository()

_configure_protobuf_repository()
