exports_files([
    "copy_files.sh",
    "exported_symbols.lds",
    "exported_symbols.def",
])

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ios",
    constraint_values = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "android",
    constraint_values = ["@platforms//os:android"],
    visibility = ["//visibility:public"],
)
