load("@bazel_skylib//lib:selects.bzl", "selects")

exports_files([
    "exported_symbols.lds",
    "exported_symbols.def",
])

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ios",
    constraint_values = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "android",
    constraint_values = ["@platforms//os:android"],
    visibility = ["//visibility:public"],
)

# The assumption is that all ARMs have NEON present (NEON is ARMs SIMD instruction set)
config_setting(
    name = "arm",
    constraint_values = ["@platforms//cpu:arm"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "x86_32",
    constraint_values = ["@platforms//cpu:x86_32"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "x86",
    match_any = [
        ":x86_32",
        ":x86_64",
    ],
)
