# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//lib:selects.bzl", "selects")

exports_files([
    "exported_symbols.lds",
    "exported_symbols.def",
])

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ios",
    constraint_values = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "android",
    constraint_values = ["@platforms//os:android"],
    visibility = ["//visibility:public"],
)

# The assumption is that all ARMs have NEON present (NEON is ARMs SIMD instruction set)
config_setting(
    name = "arm",
    constraint_values = ["@platforms//cpu:arm"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "x86_32",
    constraint_values = ["@platforms//cpu:x86_32"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "wasm",
    values = {"cpu": "wasm"},
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "x86",
    match_any = [
        ":x86_32",
        ":x86_64",
    ],
)
