genrule(
    name = "baseq3",
    srcs = [
        "@q3a_baseq3_pak0//:files",
        "@q3a_baseq3_pak2//:files",
        "@q3a_baseq3_pak4//:files",
        "@q3a_baseq3_pak5//:files",
        "@q3a_baseq3_pak6//:files",
        "@q3a_baseq3_pak8//:files",
    ],
    outs = ["baseq3_pak0.pk3"],
    cmd = """
rm -rf pak
$(location :copy_files.sh) external/q3a_baseq3_pak0/ pak $(locations @q3a_baseq3_pak0//:files)
$(location :copy_files.sh) external/q3a_baseq3_pak2/ pak $(locations @q3a_baseq3_pak2//:files)
$(location :copy_files.sh) external/q3a_baseq3_pak4/ pak $(locations @q3a_baseq3_pak4//:files)
$(location :copy_files.sh) external/q3a_baseq3_pak5/ pak $(locations @q3a_baseq3_pak5//:files)
$(location :copy_files.sh) external/q3a_baseq3_pak6/ pak $(locations @q3a_baseq3_pak6//:files)
$(location :copy_files.sh) external/q3a_baseq3_pak8/ pak $(locations @q3a_baseq3_pak8//:files)
cd pak
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs ../$(location @bazel_tools//tools/zip:zipper) c ../$@
    """,
    tools = [
        ":copy_files.sh",
        "@bazel_tools//tools/zip:zipper",
    ],
)

genrule(
    name = "missionpack",
    srcs = [
        "@q3a_missionpack_pak0//:files",
        "@q3a_missionpack_pak1//:files",
        "@q3a_missionpack_pak3//:files",
    ],
    outs = ["missionpack_pak0.pk3"],
    cmd = """
rm -rf pak
$(location :copy_files.sh) external/q3a_missionpack_pak0/ pak $(locations @q3a_missionpack_pak0//:files)
$(location :copy_files.sh) external/q3a_missionpack_pak1/ pak $(locations @q3a_missionpack_pak1//:files)
$(location :copy_files.sh) external/q3a_missionpack_pak3/ pak $(locations @q3a_missionpack_pak3//:files)
cd pak
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs ../$(location @bazel_tools//tools/zip:zipper) c ../$@
    """,
    tools = [
        ":copy_files.sh",
        "@bazel_tools//tools/zip:zipper",
    ],
)
