# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# TODO: Extract product name into var somewhere ... also use that product name to generate product.h somewhere
cc_binary(
    name = "Quake3Arena",
    deps = [
        "//code/client:clientexe",
        "@zlib//:zlib_impl",
    ],
)

cc_binary(
    name = "Quake3ArenaServer",
    visibility = ["//game/mac:__pkg__"],
    deps = [
        "//code/server:ded",
        "@zlib//:zlib_impl",
    ],
)
