# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("//build_defs:copy_to_directory.bzl", _copy_to_directory = "copy_to_directory")

# TODO: Extract product name into var somewhere ... also use that product name to generate product.h somewhere
cc_binary(
    name = "Quake3Arena",
    deps = ["//code/client:clientexe"],
)

cc_binary(
    name = "Quake3ArenaServer",
    visibility = ["//game/mac:__pkg__"],
    deps = ["//code/server:ded"],
)

_copy_to_directory(
    name = "package_dir",
    srcs = [
        ":Quake3Arena",
        ":Quake3ArenaServer",
        "//code/renderergl2:renderer_opengl2.so",
    ],
    allow_symlink = True,
    prefix_mapped_src = {
        # Base game
        "//game/baseq3:pak0": "pak0:baseq3/pak0",
        "//game/baseq3:cgame.so": "cgame:baseq3/cgamearm64",
        "//game/baseq3:qagame.so": "qagame:baseq3/qagamearm64",
        "//game/baseq3:ui.so": "ui:baseq3/uiarm64",

        # TeamArena game
        "//game/teamarena:pak0": "pak0:missionpack/pak0",
        "//game/teamarena:cgame.so": "cgame:missionpack/cgamearm64",
        "//game/teamarena:qagame.so": "qagame:missionpack/qagamearm64",
        "//game/teamarena:ui.so": "ui:missionpack/uiarm64",
    },
)

genrule(
    name = "package",
    srcs = [":package_dir"],
    outs = ["Quake3Arena.zip"],
    cmd = """
export ZIPPER=`pwd`/$(location @bazel_tools//tools/zip:zipper)
export TARGET=`pwd`/$@
cd $(location :package_dir)
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs $${ZIPPER} c $${TARGET}
    """,
    tags = ["manual"],
    tools = ["@bazel_tools//tools/zip:zipper"],
)
