# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "EXTRA_WARNINGS", "FULL_WARNINGS")

cc_library(
    name = "api",
    hdrs = ["botlib.h"],
    copts = FULL_WARNINGS,
    visibility = [
        "//code/client:__pkg__",
        "//code/game:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = ["//code/qcommon:shared_api"],
)

cc_library(
    name = "botlib",
    hdrs = [
        "be_aas.h",
        "be_ai_char.h",
        "be_ai_chat.h",
        "be_ai_gen.h",
        "be_ai_goal.h",
        "be_ai_move.h",
        "be_ai_weap.h",
        "be_ea.h",
    ],
    copts = FULL_WARNINGS,
    includes = ["."],
    visibility = [
        "//code/client:__pkg__",
        "//code/game:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        ":api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "botlib_impl",
    srcs = [
        "be_aas_bspq3.c",
        "be_aas_cluster.c",
        "be_aas_debug.c",
        "be_aas_entity.c",
        "be_aas_file.c",
        "be_aas_main.c",
        "be_aas_move.c",
        "be_aas_optimize.c",
        "be_aas_reach.c",
        "be_aas_route.c",
        "be_aas_routealt.c",
        "be_aas_sample.c",
        "be_ai_char.c",
        "be_ai_chat.c",
        "be_ai_gen.c",
        "be_ai_goal.c",
        "be_ai_move.c",
        "be_ai_weap.c",
        "be_ai_weight.c",
        "be_ea.c",
        "be_interface.c",
        "l_crc.c",
        "l_libvar.c",
        "l_log.c",
        "l_memory.c",
        "l_precomp.c",
        "l_script.c",
        "l_struct.c",
    ],
    hdrs = [
        "aasfile.h",
        "be_aas_bsp.h",
        "be_aas_cluster.h",
        "be_aas_debug.h",
        "be_aas_def.h",
        "be_aas_entity.h",
        "be_aas_file.h",
        "be_aas_funcs.h",
        "be_aas_main.h",
        "be_aas_move.h",
        "be_aas_optimize.h",
        "be_aas_reach.h",
        "be_aas_route.h",
        "be_aas_routealt.h",
        "be_aas_sample.h",
        "be_ai_weight.h",
        "be_interface.h",
        "l_crc.h",
        "l_libvar.h",
        "l_log.h",
        "l_memory.h",
        "l_precomp.h",
        "l_script.h",
        "l_struct.h",
        "l_utils.h",
    ],
    copts = EXTRA_WARNINGS + [
        "-Wunused-parameter",
        "-Wstrict-prototypes",
        "-Wmissing-variable-declarations",
    ],
    includes = ["."],
    visibility = [
        "//code/client:__pkg__",
        "//code/game:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        ":api",
        ":botlib",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)
